@@ -1,3 +1,9 @@
+2008-09-06  Juergen Wieferink <wieferink@freenet.de>
+
+	* src/term.c (enhanced_recursion):  Add curly braces {} to the list of
+	characters that must be escaped in postscript enhanced mode.
+	Bug #1968636
+
 2008-09-03  Ethan Merritt  <merritt@u.washington.edu>
 
 	* src/axis.c (add_tic_user): NULL labels are OK if requested via
